Updated project report

--- a/ProjectReport/LaTeX/Literature.bib
+++ b/ProjectReport/LaTeX/Literature.bib
@@ -104,26 +104,26 @@ in bipolarer Technik},
   publisher={Springer}
 }
 
-@book{heiderich,
-  title={Technische Probleme lösen mit C/C++, Von der Analysis bis zur Dokumentation, 4. Auflage},
-  author={Norbert Heiderich},
-  year={2020},
-  publisher={Hanser}
-}
+% @book{heiderich,
+%   title={Technische Probleme lösen mit C/C++, Von der Analysis bis zur Dokumentation, 4. Auflage},
+%   author={Norbert Heiderich},
+%   year={2020},
+%   publisher={Hanser}
+% }
 
-@book{cplusplus,
-  title={C++ Succinctly},
-  author={Michael McLaughlin},
-  year={2012},
-  publisher={Syncfusion Inc.}
-}
+% @book{cplusplus,
+%   title={C++ Succinctly},
+%   author={Michael McLaughlin},
+%   year={2012},
+%   publisher={Syncfusion Inc.}
+% }
 
-@book{cppSTL,
-  title={Die C++ Standardbibliothek, Einführung und Nachschlagewerk, 4. Auflage},
-  author={Stefan Kuhlins},
-  year={2005},
-  publisher={Springer}
-}
+% @book{cppSTL,
+%   title={Die C++ Standardbibliothek, Einführung und Nachschlagewerk, 4. Auflage},
+%   author={Stefan Kuhlins},
+%   year={2005},
+%   publisher={Springer}
+%}
 
 @book{zitat1,
   title={Richard Feynman},
