Added numerical results section and added pictures
Refined ending section

--- a/ProjectReport/LaTeX/Literature.bib
+++ b/ProjectReport/LaTeX/Literature.bib
@@ -3,7 +3,8 @@
   title={Numerical Simulation of Radio Frequency Ablation with State Dependent Material Parameters in Three Space Dimensions},
   author={Tim Kröger et. al.},
   year={2006},
-  publisher={Springer}
+  publisher={ International Conference on Medical Image Computing and Computer-Assisted Intervention
+   Medical Image Computing and Computer-Assisted Intervention – MICCAI 2006 pp 380-388, Springer}
 }
 
 @book{watanabe,
