Further write report

--- a/ProjectReport/LaTeX/Literature.bib
+++ b/ProjectReport/LaTeX/Literature.bib
@@ -105,26 +105,12 @@ in bipolarer Technik},
   publisher={Springer}
 }
 
-% @book{heiderich,
-%   title={Technische Probleme lösen mit C/C++, Von der Analysis bis zur Dokumentation, 4. Auflage},
-%   author={Norbert Heiderich},
-%   year={2020},
-%   publisher={Hanser}
-% }
-
-% @book{cplusplus,
-%   title={C++ Succinctly},
-%   author={Michael McLaughlin},
-%   year={2012},
-%   publisher={Syncfusion Inc.}
-% }
-
-% @book{cppSTL,
-%   title={Die C++ Standardbibliothek, Einführung und Nachschlagewerk, 4. Auflage},
-%   author={Stefan Kuhlins},
-%   year={2005},
-%   publisher={Springer}
-%}
+@book{padma,
+  title={Liver Tumor Ablation: Percaneous and Open Approaches, Journal of Surcigal Oncology 2009;100,  page 619-634},
+  author={Srikanth Padma et al.},
+  year={2009},
+  publisher={Wiley Periodicals Inc.}
+}
 
 @book{zitat1,
   title={Richard Feynman},
